Split batch performance tests in several test cases