@@ -3,16 +3,13 @@
  * All rights reserved
  * mailto:contact AT sonarsource DOT com
  */
-package com.sonar.performance.batch;
+package com.sonar.performance.batch.suite;
 
 import com.sonar.orchestrator.Orchestrator;
 import com.sonar.orchestrator.build.SonarRunner;
-import com.sonar.orchestrator.locator.FileLocation;
-import com.sonar.orchestrator.locator.MavenLocation;
 import com.sonar.performance.PerfTestCase;
 import org.apache.commons.io.FileUtils;
 import org.junit.Before;
-import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -22,8 +19,6 @@ import org.sonar.wsclient.issue.IssueQuery;
 import org.sonar.wsclient.issue.Issues;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.util.HashSet;
 import java.util.InvalidPropertiesFormatException;
@@ -32,25 +27,13 @@ import java.util.Set;
 
 import static org.fest.assertions.Assertions.assertThat;
 
-public class ScanTest extends PerfTestCase {
+public class IssuesTest extends PerfTestCase {
 
   @ClassRule
   public static TemporaryFolder temp = new TemporaryFolder();
 
   @ClassRule
-  public static Orchestrator orchestrator = Orchestrator.builderEnv()
-    .addPlugin(MavenLocation.create("com.sonarsource.xoo", "sonar-xoo-plugin", "1.0-SNAPSHOT"))
-    .restoreProfileAtStartup(FileLocation.ofClasspath("/one-xoo-issue-per-line.xml"))
-    .build();
-
-  @BeforeClass
-  public static void setUp() throws IOException {
-    // Execute this query in order for next analysis to not freeze (FIXME why does it freeze?)
-    orchestrator.resetData();
-
-    // Execute a first analysis to prevent any side effects with cache of plugin JAR files
-    orchestrator.executeBuild(newSonarRunner("-Xmx512m -server", "sonar.profile", "one-xoo-issue-per-line"));
-  }
+  public static Orchestrator orchestrator = BatchPerfTestSuite.ORCHESTRATOR;
 
   @Before
   public void cleanDatabase() {
@@ -188,92 +171,6 @@ public class ScanTest extends PerfTestCase {
     orchestrator.executeBuild(runner);
     prof = readProfiling(projectBaseDir, "foo");
     assertDurationAround(Long.valueOf(prof.getProperty("InitialOpenIssuesSensor")), 2089L);
-  }
-
-  private Properties readProfiling(File baseDir, String moduleKey) throws FileNotFoundException, IOException, InvalidPropertiesFormatException {
-    File profiling = new File(baseDir, ".sonar/profiling/" + moduleKey + "-profiler.xml");
-    Properties props = new Properties();
-    FileInputStream in = new FileInputStream(profiling);
-    try {
-      props.loadFromXML(in);
-    } finally {
-      in.close();
-    }
-    return props;
-  }
-
-  @Test
-  public void preview_scan_xoo_project() {
-    SonarRunner runner = newSonarRunner(
-      "-Xmx512m -server -XX:MaxPermSize=64m",
-      "sonar.profile", "one-xoo-issue-per-line",
-      "sonar.dryRun", "true",
-      "sonar.showProfiling", "true"
-      );
-    long start = System.currentTimeMillis();
-    orchestrator.executeBuild(runner);
-    long firstDuration = System.currentTimeMillis() - start;
-    System.out.println("First preview analysis: " + firstDuration + "ms");
-
-    // caches are warmed
-    start = System.currentTimeMillis();
-    orchestrator.executeBuild(runner);
-    long secondDuration = System.currentTimeMillis() - start;
-    System.out.println("Second preview analysis: " + secondDuration + "ms");
-
-    assertDurationAround(secondDuration, 9800L);
-  }
-
-  @Test
-  public void should_not_fail_with_limited_xmx_memory_and_no_coverage_per_test() {
-    orchestrator.executeBuild(
-      newSonarRunner("-Xmx80m -server -XX:-HeapDumpOnOutOfMemoryError")
-      );
-  }
-
-  @Test
-  public void computeSyntaxHighlightingOnBigFiles() throws IOException {
-
-    File baseDir = temp.newFolder();
-    File srcDir = new File(baseDir, "src");
-    srcDir.mkdir();
-
-    int nbFiles = 100;
-    int chunkSize = 100000;
-    for (int nb = 1; nb <= nbFiles; nb++) {
-      File xooFile = new File(srcDir, "sample" + nb + ".xoo");
-      File xoohighlightingFile = new File(srcDir, "sample" + nb + ".xoo.highlighting");
-      FileUtils.write(xooFile, "Sample xoo\ncontent");
-      StringBuilder sb = new StringBuilder(16 * chunkSize);
-      for (int i = 0; i < chunkSize; i++) {
-        sb.append(i).append(":").append(i + 1).append(":s\n");
-      }
-      FileUtils.write(xoohighlightingFile, sb.toString());
-    }
-
-    SonarRunner runner = SonarRunner.create()
-      .setProperties(
-        "sonar.projectKey", "highlighting",
-        "sonar.projectName", "highlighting",
-        "sonar.projectVersion", "1.0",
-        "sonar.sources", "src",
-        "sonar.showProfiling", "true")
-      .setEnvironmentVariable("SONAR_RUNNER_OPTS", "-Xmx512m -server -XX:MaxPermSize=64m")
-      .setRunnerVersion("2.4")
-      .setProjectDir(baseDir);
-
-    long start = System.currentTimeMillis();
-    orchestrator.executeBuild(runner);
-    long duration = System.currentTimeMillis() - start;
-    assertDurationAround(duration, 43000L);
-  }
-
-  private static SonarRunner newSonarRunner(String sonarRunnerOpts, String... props) {
-    return SonarRunner.create()
-      .setProperties(props)
-      .setEnvironmentVariable("SONAR_RUNNER_OPTS", sonarRunnerOpts)
-      .setRunnerVersion("2.3")
-      .setProjectDir(FileLocation.of("projects/xoo-sample").getFile());
   }
 
   private static File createBigXooProject(int nbFiles, int nbIssuesPerFile) throws IOException {
